// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChannelMessageActions renders component with status=broadcasted and fromYou=false 1`] = `
<WithStyles(ForwardRef(Grid))
  alignItems="center"
  container={true}
  direction="row"
  justify="flex-end"
/>
`;

exports[`ChannelMessageActions renders component with status=broadcasted and fromYou=true 1`] = `
<WithStyles(ForwardRef(Grid))
  alignItems="center"
  container={true}
  direction="row"
  justify="flex-end"
/>
`;

exports[`ChannelMessageActions renders component with status=cancelled and fromYou=false 1`] = `
<WithStyles(ForwardRef(Grid))
  alignItems="center"
  container={true}
  direction="row"
  justify="flex-end"
/>
`;

exports[`ChannelMessageActions renders component with status=cancelled and fromYou=true 1`] = `
<WithStyles(ForwardRef(Grid))
  alignItems="center"
  container={true}
  direction="row"
  justify="flex-end"
>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    <WithStyles(ForwardRef(Button))
      color="primary"
      onClick={[MockFunction]}
      size="small"
    >
      resend
    </WithStyles(ForwardRef(Button))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    <WithStyles(ForwardRef(Button))
      color="primary"
      onClick={[MockFunction]}
      size="small"
    >
      cancel
    </WithStyles(ForwardRef(Button))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`ChannelMessageActions renders component with status=failed and fromYou=false 1`] = `
<WithStyles(ForwardRef(Grid))
  alignItems="center"
  container={true}
  direction="row"
  justify="flex-end"
/>
`;

exports[`ChannelMessageActions renders component with status=failed and fromYou=true 1`] = `
<WithStyles(ForwardRef(Grid))
  alignItems="center"
  container={true}
  direction="row"
  justify="flex-end"
>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    <WithStyles(ForwardRef(Button))
      color="primary"
      onClick={[MockFunction]}
      size="small"
    >
      resend
    </WithStyles(ForwardRef(Button))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    <WithStyles(ForwardRef(Button))
      color="primary"
      onClick={[MockFunction]}
      size="small"
    >
      cancel
    </WithStyles(ForwardRef(Button))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`ChannelMessageActions renders component with status=pending and fromYou=false 1`] = `
<WithStyles(ForwardRef(Grid))
  alignItems="center"
  container={true}
  direction="row"
  justify="flex-end"
/>
`;

exports[`ChannelMessageActions renders component with status=pending and fromYou=true 1`] = `
<WithStyles(ForwardRef(Grid))
  alignItems="center"
  container={true}
  direction="row"
  justify="flex-end"
/>
`;

exports[`ChannelMessageActions renders component with status=success and fromYou=false 1`] = `
<WithStyles(ForwardRef(Grid))
  alignItems="center"
  container={true}
  direction="row"
  justify="flex-end"
/>
`;

exports[`ChannelMessageActions renders component with status=success and fromYou=true 1`] = `
<WithStyles(ForwardRef(Grid))
  alignItems="center"
  container={true}
  direction="row"
  justify="flex-end"
/>
`;
